--- a/mobile/src/main/res/values/color.xml
+++ b/mobile/src/main/res/values/color.xml
@@ -4,6 +4,16 @@
     <color name="connection_title">#4c4c4c</color>
     <color name="viewBg">#f1f5f8</color>
 
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="half_black">#808080</color>
+    <color name="white">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="pink">#e91e63</color>
+    <color name="pink_pressed">#ec407a</color>
+    <color name="blue_semi_transparent">#805677fc</color>
+    <color name="blue_semi_transparent_pressed">#80738ffe</color>
+
+
     <color name="text_color">#FFFFFF</color>
     <color name="background">#FFFFFF</color>
     <color name="list_background">#303030</color>
@@ -21,7 +31,7 @@
     <color name="myPrimaryColor">#f26c4f</color>
     <color name="myPrimaryDarkColor">#b32000</color>
     <color name="primary_light">#dfdfdf</color>
-    <color name="myAccentColor">#8a8a8a</color>
+    <color name="myAccentColor">#E91E63</color>
     <color name="myTextPrimaryColor">#212121</color>
     <color name="mySecondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
