Completed connections activirt ----------------------------------------------------------
Next

FAB and Snackbar
 Dialogues for addition and removing connections

--- a/mobile/src/main/res/drawable/fab_label_background.xml
+++ b/mobile/src/main/res/drawable/fab_label_background.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/black_semi_transparent" />
-    <padding
-        android:bottom="4dp"
-        android:left="16dp"
-        android:right="16dp"
-        android:top="4dp" />
-    <corners android:radius="2dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_pressed="true">
+        <shape>
+            <solid android:color="#A6000000" />
+            <padding android:bottom="4dp" android:left="8dp" android:right="8dp" android:top="4dp" />
+            <corners android:radius="2dp" />
+        </shape>
+    </item>
+
+    <item>
+        <shape>
+            <solid android:color="#99000000" />
+            <padding android:bottom="4dp" android:left="8dp" android:right="8dp" android:top="4dp" />
+            <corners android:radius="2dp" />
+        </shape>
+    </item>
+
+</selector>
