--- a/mobile/src/main/res/layout/connection_activity.xml
+++ b/mobile/src/main/res/layout/connection_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            android:focusable="false"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
@@ -80,7 +81,6 @@
         android:layout_height="match_parent"
         android:background="@color/viewBg"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="info.androidhive.cardview.MainActivity"
         tools:showIn="@layout/connection_activity">
 
         <android.support.v7.widget.RecyclerView
@@ -92,80 +92,35 @@
 
     </RelativeLayout>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:fab="http://schemas.android.com/apk/res-auto"
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/menu_red"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:focusableInTouchMode="false"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        fab:menu_backgroundColor="#ccffffff"
+        fab:menu_labels_ellipsize="end"
+        fab:menu_labels_singleLine="true">
 
-        <com.getbase.floatingactionbutton.FloatingActionsMenu
-            android:id="@+id/multiple_actions"
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/addBluetooth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            fab:fab_addButtonColorNormal="@color/myAccentColor"
-            fab:fab_addButtonColorPressed="@color/myAccentColor"
-            fab:fab_addButtonPlusIconColor="@color/white"
-            fab:fab_labelStyle="@style/menu_labels_style">
+            android:src="@drawable/ic_edit"
+            fab:fab_label="Bluetooth"
+            fab:fab_size="mini" />
 
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_a"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                fab:fab_colorNormal="@color/white"
-                fab:fab_colorPressed="@color/white_pressed"
-                fab:fab_icon="@drawable/bluetooth"
-                fab:fab_title="Bluetooth" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/addWifi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_edit"
+            fab:fab_label="Wifi"
+            fab:fab_size="mini" />
 
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_b"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                fab:fab_colorNormal="@color/white"
-                fab:fab_colorPressed="@color/white_pressed"
-                fab:fab_icon="@drawable/wifi"
-                fab:fab_title="WiFi" />
-
-        </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
-
-    </RelativeLayout>
-</android.support.design.widget.CoordinatorLayout><!--
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-     <include
-        android:id="@+id/toolbar_actionbar"
-        layout="@layout/toolbar_default"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-                <ListView
-                    android:id="@+id/conn_list"
-                    android:layout_marginTop="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:divider="@null"
-                    android:layout_below="@+id/toolbar_actionbar" />
-
-    <com.gc.materialdesign.views.ButtonFloat
-        android:id="@+id/add"
-        android:layout_width="@dimen/float_size"
-        android:layout_height="@dimen/float_size"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="40dp"
-        materialdesign:iconDrawable="@drawable/fab_add"
-        android:background="@color/connections"
-        android:onClick="add"
-        materialdesign:animate="true" />
-
-</RelativeLayout>
-    -->
+    </com.github.clans.fab.FloatingActionMenu>
+</android.support.design.widget.CoordinatorLayout>
