--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -18,6 +18,11 @@
     <dimen name="backdrop_subtitle">18dp</dimen>
     <dimen name="detail_backdrop_height">250dp</dimen>
 
+    <!-- Dialogue Bar Dimensions !-->
+    <dimen name="customTitle">14sp</dimen>
+    <dimen name="customEntry">18sp</dimen>
+
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
