--- a/mobile/src/main/res/layout/dialog_addbluetoothconnection.xml
+++ b/mobile/src/main/res/layout/dialog_addbluetoothconnection.xml
@@ -53,41 +53,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:text="Address"
+        android:text="Device"
         android:textColor="#80000000"
         android:textSize="@dimen/customTitle" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/connection_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_toLeftOf="@+id/connection_port"
-            android:layout_weight="1"
-            android:hint="192.168."
-            android:imeOptions="actionNext"
-            android:inputType="text|numberDecimal"
-            android:text="192.168."
-            android:textColor="#000000"
-            android:textSize="@dimen/customEntry" />
+        <com.jaredrummler.materialspinner.MaterialSpinner
+            android:id="@+id/connection_device"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/connection_port"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:gravity="center_horizontal"
-            android:hint="64788"
-            android:inputType="number"
-            android:minEms="4"
-            android:text="64788"
-            android:textColor="#000000"
-            android:textSize="@dimen/customEntry" />
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
