--- a/mobile/src/main/res/layout/connection_activity.xml
+++ b/mobile/src/main/res/layout/connection_activity.xml
@@ -111,7 +111,7 @@
             android:id="@+id/addBluetooth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_edit"
+            android:src="@drawable/browser_bookmark"
             fab:fab_label="Bluetooth"
             fab:fab_size="mini" />
 
@@ -119,7 +119,7 @@
             android:id="@+id/addWifi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_edit"
+            android:src="@drawable/browser_bookmark"
             fab:fab_label="Wifi"
             fab:fab_size="mini" />
 
